2007-07-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snit.test: Snit versions bumped to 1.3 and 2.2. Extended
	* snit.man: 'info' method and typemethod with sub-methods
	* snitfaq.man: 'args', 'body' and 'default' to query method
	* main1.tcl: arguments, argument defaults, and bodies.
	* main1_83.tcl:
	* main2.tcl:
	* pkgIndex.tcl:

2007-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snitfaq.man: Replaced deprecated {expand} with {*}.

2007-05-01  Andreas Kupries  <andreask@activestate.com>

	* main2.tcl: [Bug 1710640]. Replaced deprecated {expand} with {*}.

	* snit.test: Updated to changes in 8.5a6.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snit.man: Fixed all warnings due to use of now deprecated
	* snitfaq.man: commands. Added a section about how to give
	  feedback.

2007-02-12  Andreas Kupries  <andreask@activestate.com>

	* snitfaq.man: Fixed typos, etc. reported in [Bug 1658089].

2006-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* snit.man, main1.tcl, main1_83.tcl, main2.tcl: Allow -class to be
	passed to snit::widget. [Patch 1580120]
	* pkgIndex.tcl, snit.tcl, snit2.tcl: Bumped versions to 1.2.1 / 2.1.1.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-20  Will Duquette <will@wjduquette.com>
	* pkgIndex.tcl, snit2.tcl, snit.man, snitfaq.man, README.txt: 
	Bumped the version number from 2.0 to 2.1, per Andreas' request.
	Also, added details about the implications of 2.1's use of
	[namespace path] to README.txt and the Snit FAQ.
	
2006-09-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snit_tcl83_utils.tcl: Made the initialization of the
	  compatibility system a bit more robust against loading it
	  multiple times.

2006-09-11  Will Duquette <will@wjduquette.com>
	* main2.tcl: Comp.statement.typevariable now places the type name