@@ -1,3 +1,13 @@
+2007-07-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* main1_83.tcl (::snit::Comp.statement.oncget): Fixed double
+	* main1.tcl (::snit::Comp.statement.oncget): import of instance
+	* main2.tcl (::snit::Comp.statement.oncget): and type variables.
+	* snit.man: Bumped versions to 1.3.1 and 2.2.1 respectively.
+	* pkgIndex.tcl:
+	* snit.tcl:
+	* snit2.tcl:
+
 2007-07-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* snit.test: Snit versions bumped to 1.3 and 2.2. Extended
